<resources>
    <string name="app_name">ThreadApp</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="post_to_main_thread">Post to Main Thread:</string>
    <string name="enable_disable_button">Enable/Disable Button</string>
    <string name="random_color">Random Color</string>
    <string name="post_delayed_2_sec">Post Delayed (2 sec.)</string>
    <string name="post_delayed_with_token_2_sec">Post Delayed with Token (2 sec.)</string>
    <string name="show_toast">Show Toast</string>
    <string name="cancel">Cancel</string>
    <string name="test_button">Test Button</string>
    <string name="hello">Hello world!</string>
</resources>