<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondHandlerActivity">

    <LinearLayout
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="@dimen/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_to_main_thread" />

        <Button
            android:id="@+id/btn_enable_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_disable_button" />

        <Button
            android:id="@+id/btn_random_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve"
            android:text="@string/post_delayed_2_sec" />

        <Button
            android:id="@+id/btn_enable_disable_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_disable_button" />

        <Button
            android:id="@+id/btn_random_color_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_color" />

        <Button
            android:id="@+id/btn_cancel_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve"
            android:text="@string/post_delayed_with_token_2_sec" />

        <Button
            android:id="@+id/btn_random_color_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_color" />

        <Button
            android:id="@+id/btn_show_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_toast" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_two"
            android:text="@string/test_button" />

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            android:padding="2dp">

            <View
                android:id="@+id/colorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@android:color/white" />

        </FrameLayout>
    </LinearLayout>
</ScrollView>